@@ -72,11 +72,11 @@ const PaymentMethodsSelector = ( { onClose, enabledPaymentMethods = [] } ) => {
 			</PaymentMethodCheckboxes>
 			<HorizontalRule className="woocommerce-payments__payment-method-selector__separator" />
 			<div className="woocommerce-payments__payment-method-selector__footer">
-				<Button isPrimary onClick={ handleAddSelected }>
-					{ __( 'Add selected', 'woocommerce-payments' ) }
-				</Button>
 				<Button isSecondary onClick={ onClose }>
 					{ __( 'Cancel', 'woocommerce-payments' ) }
+				</Button>
+				<Button isPrimary onClick={ handleAddSelected }>
+					{ __( 'Add selected', 'woocommerce-payments' ) }
 				</Button>
 			</div>
 		</Modal>
